--- a/main.html
+++ b/main.html
@@ -1,1 +1,12 @@
-<html>Hello </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Hello</title>
+   
+</head>
+<body>
+    <h2> Hello</h2>
+</body>
+</html>
