--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ data-wf-site="5cff83ac2044e22cb8cf2f11">
             <div data-w-id="a46d1827-5165-1246-fde5-5a8b3a359089" class="bg-scroll"></div>
             <div class="bg-main"></div>
             <div class="hero-parent">
-                <div data-w-id="d71726fa-8aba-407f-0581-2d6e6f566dc1" style=" opacity:0" class="sub-title" >Jiang Qu
+                <div data-w-id="d71726fa-8aba-407f-0581-2d6e6f566dc1" style="font-size:160px; opacity:0" class="sub-title" >Jiang Qu
                 </div>
             </div>
             <div class="intro-parent">
