--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html data-wf-page="5d547d82782f476bb4a9d5ce"
 data-wf-site="5cff83ac2044e22cb8cf2f11">
-
 <head>
     <meta charset="utf-8" />
-    <title>Jiang Qu - 瞿江</title>
+    <title>Jiang Qu | 瞿江</title>
     <meta
         content="Jiang Qu"
         name="description" />
     <meta content="Home - Jiang" property="og:title" />
     <meta
-        content="I'm Jiang Qu, an optimist who is exploring interesting and futuristic things.
-        As a Master of Development Engineering with a concentration in AI/Data Analytics for Social Impact from UC Berkeley. "
+        content="I'm Jiang Qu, an optimist who is exploring interesting and futuristic things. As a Master of Development Engineering with a concentration in AI/Data Analytics for Social Impact from UC Berkeley. "
         property="og:description" />
     <meta name="google-site-verification" content="RWtF1dupC1gKtWkS9ZNCuZEF_JjI3l6_jlvkSHawOkc" />
     <meta name="baidu-site-verification" content="code-gFcGJ4ykCM" />
@@ -51,7 +49,7 @@ data-wf-site="5cff83ac2044e22cb8cf2f11">
             <div class="m-num">About me</div>
         </div>
         <div>
-            <img src="images/DSC_4523.jpg"
+            <img src="images/IMG_4289.JPG"
             style='position:absolute; 
             left:20%;
             top: 30%;'
