--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ data-wf-site="5cff83ac2044e22cb8cf2f11">
 
     <div id="Home" data-w-id="e8bad840-8fd1-63af-7b85-b9eb171d9a31" class="scroll-container">
         <div class="sticky-container"><img
-                src="images/se_scroll.gif"
+                src="images/mouse_scroll.gif"
                 width="50" data-w-id="dcf28854-c021-68b1-26d8-0a4a2d0891e9" class="scroll-img" />
             <div data-w-id="d4634e5a-5139-cd2e-7c8d-125f52d7d88f" class="overlay"></div>
             <div data-w-id="a46d1827-5165-1246-fde5-5a8b3a359089" class="bg-scroll"></div>
